--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/unsuccessful-applications.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/unsuccessful-applications.html
@@ -22,6 +22,7 @@
         </div>
     </div>
     <div class="table-overflow">
+        <form th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}">
         <table id="application-list">
             <thead>
             <tr>
@@ -52,6 +53,7 @@
             </tr>
             </tbody>
         </table>
+        </form>
     </div>
     <th:block th:insert="fragments/competition-setup :: comp-setup-mark-as-successful-modal" />
 
